<?xml version="1.0" encoding="utf-8"?>
<resources>

     <string name="app_name">Slam\'\'ee</string>
    <string name="hello_world">Hello world!</string>
    <color name="FontColor">#1a5293</color>
    <string name="welcomeuser">Hello \! (username) </string>
    <string name="Logo">Slam\'\'ee</string>
<string name="action_settings">Settings</string>
<string name="none">None</string>
<string name="password">Normal Password</string>
<string name="picpass">Picture Password</string>
<string name="chng_pass_hdr">Change Password</string>
<string name="chng_old_pass">Old Password</string>
<string name="chng_chng">Change</string>
<string name="sett_sett">Settings</string>
<string name="sett_one">Change My Info</string>
<string name="sett_two">Change My Password</string>
<string name="splash2_txt">Get Started</string>
<string name="secu_txt">Method of security</string>
<string name="secu_next">Next</string>


<string name="start_new">New</string>
<string name="brush">Brush</string>
<string name="erase">Erase</string>
<string name="save">Save</string>
<string name="paint">Paint</string>


</resources>
