<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/secu_txt"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
         android:textSize="20sp" />
    
<RadioGroup
        android:id="@+id/radiogroup"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

    <RadioButton
        android:id="@+id/none"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/FontColor"
        android:text="@string/none" />

    <RadioButton
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/FontColor"
        android:text="@string/password" />

    <RadioButton
        android:id="@+id/picpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/FontColor"
        android:text="@string/picpass" />
</RadioGroup>

<Button
    android:id="@+id/next"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/btn"
    android:textColor="@color/FontColor"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="10dp"
    android:layout_below="@+id/radiogroup"
    android:text="@string/secu_next" />

</RelativeLayout>
