<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/Chng_hdr"
        android:text="@string/chng_pass_hdr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textSize="40sp" />

    <TextView
        android:id="@+id/chng_old_passtxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/chng_old_pass"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/chng_old_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/chng_old_passtxt"
        android:textColor="@color/FontColor"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/chng_old_pass"
        android:layout_marginTop="60dp"
        android:background="@drawable/btn"
        android:textColor="@color/FontColor"
        android:text="@string/chng_chng" />

</RelativeLayout>
